# vcdojo

./: .gitignore  README.md  index.html  lab2.css  orig.html  package-lock.json  package.json  pyproject.toml  vite.config.js
blender/: hud.glb  shotgun.glb  space_ship.glb  spaceship.glb  war_drone.glb
src/: App.vue  lab00.html  lab01.html  lab01.js  lab2.js  old.js  style.css
src/components/: About.vue  Bushido.vue  Home.vue  Lab0.vue  Lab2.vue  ThreeCanvas.vue  TychoStation.vue
src/js/: bushido.js  lab0.js  lab1.js  lab2.js  tycho.js
src/router/: index.js
src/styles/: bushido.css  lab1.css  lab2.css
src/views/: About.vue  Bushido.vue  Home.vue  Lab0.vue  Lab1.vue  Lab2.vue  bushido.html
vcdojo/: __init__.py  main.py
vcdojo/lab01/: CV0.ipynb
vcdojo/static/: lab01.js  lab02.css  lab02.js  style.css  weight_data.json
vcdojo/templates/: index.html  index2.html  lab00.html  lab01.html  lab02.html
