[tool.poetry]
name = "vcdojo"
version = "0.1.0"
description = ""
authors = ["Noe Javet <np.javet@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
opencv-python = "^4.10.0.84"
matplotlib = "^3.10.0"
fastapi = "^0.115.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
run = "vcdojo:run"

